--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_TMDB_KEY=891c507665f4ddfedd6ce3424439e7ac
 VITE_MOVYX_API=https://movyxapi.onrender.com/
+VITE_PUBLIC_POSTHOG_KEY=phc_aX2LKhSa5vPE0R2ZgxtumR8EIhQscvSKoQqfiDEMl8l
+VITE_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
