--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.2",
     "framer-motion": "^9.0.0",
     "lucide-react": "^0.561.0",
+    "posthog-js": "^1.309.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.10.1"
